--- a/theme/templates/disqus.html
+++ b/theme/templates/disqus.html
@@ -2,6 +2,7 @@
     <div class="comments">
         <div id="disqus_thread"></div>
         <script type="text/javascript">
+            var disqus_shortname = 'ownspace'; // required: replace example with your forum shortname
             var disqus_identifier = "{{ article.url }}";
             var disqus_url = "{{ SITEURL }}/{{ article.url }}";
             (function() {
