--- a/theme/templates/disqus.html
+++ b/theme/templates/disqus.html
@@ -2,17 +2,18 @@
     <div class="comments">
         <div id="disqus_thread"></div>
         <script type="text/javascript">
-            var disqus_shortname = 'ownspace'; // required: replace example with your forum shortname
+            var disqus_shortname = '{{ DISQUS_SITENAME }}'; // required: replace example with your forum shortname
             var disqus_identifier = "{{ article.url }}";
             var disqus_url = "{{ SITEURL }}/{{ article.url }}";
             (function() {
                 var dsq = document.createElement('script');
                 dsq.type = 'text/javascript';
                 dsq.async = true;
-                dsq.src = 'http://{{ DISQUS_SITENAME }}.disqus.com/embed.js';
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
             })();
         </script>
         <noscript>Please enable JavaScript to view <a href="http://disqus.com/?ref_noscript">comments</a>.</noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
     </div>
 {% endif %}
